--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Nimesh Solanki <nimesh3536@gmail.com> (https://www.snimesh.com/)",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-typical": "^0.1.3"
   },
