--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-github-cards": "^1.1.1",
     "react-typical": "^0.1.3"
   },
   "devDependencies": {
