--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
   "author": "Nimesh Solanki <nimesh3536@gmail.com> (https://www.snimesh.com/)",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^4.5.0",
-    "muicss": "^0.10.2",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.0.0",
     "react-typical": "^0.1.3"
   },
   "devDependencies": {
