--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "resume-v2.1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "rm -rf dist && parcel build src/index.html",
@@ -18,7 +17,10 @@
     "react-typical": "^0.1.3"
   },
   "devDependencies": {
-    "parcel": "^1.12.4"
+    "@parcel/packager-raw-url": "^2.10.0",
+    "@parcel/transformer-webmanifest": "^2.10.0",
+    "parcel": "^2.10.0",
+    "process": "^0.11.10"
   },
   "browserslist": [
     "last 2 Chrome versions"
