--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "rm -rf dist && parcel build src/index.html",
+    "dev": "NODE_OPTIONS= parcel src/index.html",
+    "build": "rm -rf dist && NODE_OPTIONS= parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
